--- a/bin/schemas/package.json
+++ b/bin/schemas/package.json
@@ -96,13 +96,13 @@
           "const": "quasar inspect | strip-ansi 1>webpack.info"
         },
         "lint": {
-          "const": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
+          "const": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
         },
         "lint-no-fix": {
-          "const": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
+          "const": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
         },
         "lint-no-fix-profile": {
-          "const": "set TIMING=1 && eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
+          "const": "set TIMING=1 && eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}"
         },
         "npm:install": {
           "const": "npm install --no-audit --strict-peer-deps"
