--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "lcov-report",
     "node_modules"
   ],
-  "extends": "./src/tsconfig-strict",
+  "extends": "./tsconfig/strict",
   "include": [
     "*.js",
     "*.ts",
@@ -39,21 +39,27 @@
     ".prettierrc.js",
     ".stylelintrc.js",
     ".stylelintrc-html.js",
-    "__mocks__/**/*.js",
-    "__mocks__/**/*.ts",
-    "__mocks__/**/*.vue",
     "api/**/*.js",
     "api/**/*.ts",
     "api/**/*.vue",
     "bin/**/*.js",
     "bin/**/*.ts",
     "bin/**/*.vue",
-    "fixtures/**/*.js",
-    "fixtures/**/*.ts",
-    "fixtures/**/*.vue",
+    "commitlint/**/*.js",
+    "commitlint/**/*.ts",
+    "commitlint/**/*.vue",
+    "eslint/**/*.js",
+    "eslint/**/*.ts",
+    "eslint/**/*.vue",
+    "jest/**/*.js",
+    "jest/**/*.ts",
+    "jest/**/*.vue",
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.vue",
+    "stylelint/**/*.js",
+    "stylelint/**/*.ts",
+    "stylelint/**/*.vue",
     "tests/**/*.js",
     "tests/**/*.ts",
     "tests/**/*.vue"
