--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,8 @@
 includes:
-  - src/phpstan.neon
+  - phpstan/default.neon
 parameters:
   paths:
     - api
     - bin
-    - src
+    - php-cs-fixer
   tmpDir: cache/phpstan
