--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.php.coverage.reportPaths=
 sonar.projectKey=config
 sonar.projectName=Config
 sonar.sourceEncoding=UTF-8
-sonar.sources=api,bin,src
+sonar.sources=api,bin,commitlint,eslint,jest,package-json-lint,php-cs-fixer,phpstan,stylelint,tsconfig,typedoc
 sonar.tests=tests
 sonar.typescript.file.suffixes=.ts,.vue
 sonar.typescript.tsconfigPath=tsconfig-min.json
