--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "husky:post-commit": "php bin/post-commit.php",
     "husky:pre-commit": "php bin/pre-commit.php",
     "husky:unset-hooks": "git config --unset core.hooksPath",
-    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
-    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
-    "lint-no-fix-profile": "set TIMING=1 && eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern **/*.{js,ts,vue}",
+    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern **/*.{js,ts,vue}",
+    "lint-no-fix-profile": "set TIMING=1 && eslint --max-warnings 0 --no-error-on-unmatched-pattern **/*.{js,ts,vue}",
     "npm:install": "npm install --no-audit --strict-peer-deps",
     "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
     "npm:publish": "publish-if-not-exists",
@@ -88,7 +88,7 @@
     "@commitlint/cli": ">=17",
     "@commitlint/config-conventional": ">=17",
     "@jest/test-sequencer": ">=28",
-    "@skylib/eslint-plugin": "^0.1.48",
+    "@skylib/eslint-plugin": "^0.1.49",
     "@types/eslint": ">=8",
     "@types/jest": ">=28",
     "@types/node": ">=18",
@@ -109,7 +109,7 @@
     "eslint-plugin-github": ">=4",
     "eslint-plugin-import": ">=2",
     "eslint-plugin-jest": ">=26",
-    "eslint-plugin-jest-extended": ">=0",
+    "eslint-plugin-jest-extended": ">=1",
     "eslint-plugin-jquery": ">=1",
     "eslint-plugin-jsdoc": ">=39",
     "eslint-plugin-no-type-assertion": ">=1",
