--- a/bin/schemas/package.json
+++ b/bin/schemas/package.json
@@ -15,7 +15,10 @@
           "const": "cf ./dist && tsc --project tsconfig-build.json"
         },
         "build-doc": {
-          "const": "typedoc src && cpy docs-static/* docs"
+          "enum": [
+            "cf ./docs && node ./build-doc.js && cpy assets/docs/static/* docs",
+            "typedoc src && cpy assets/docs/static/* docs"
+          ]
         },
         "build-es": {
           "const": "cf ./es && tsc --project tsconfig-build-es.json"
