chore(package): Edited dependencies

--- a/package.json
+++ b/package.json
@@ -87,14 +87,14 @@
   "peerDependencies": {
     "@commitlint/cli": ">=17",
     "@commitlint/config-conventional": ">=17",
-    "@jest/test-sequencer": ">=28",
+    "@jest/test-sequencer": "^28",
     "@skylib/eslint-plugin": "^0.1.50",
     "@types/eslint": ">=8",
-    "@types/jest": ">=28",
+    "@types/jest": "^28",
     "@types/node": ">=18",
     "@typescript-eslint/eslint-plugin": ">=5",
     "@typescript-eslint/parser": ">=5",
-    "@vue/vue3-jest": ">=28",
+    "@vue/vue3-jest": "^28",
     "clear-folder": ">=3",
     "cpy-cli": ">=4",
     "css-property-sort-order-smacss": ">=2",
@@ -131,9 +131,9 @@
     "eslint-plugin-vue-scoped-css": ">=2",
     "eslint-plugin-xss": ">=0",
     "husky": ">=8",
-    "jest": ">=28",
-    "jest-environment-jsdom": ">=28",
-    "jest-environment-node": ">=28",
+    "jest": "^28",
+    "jest-environment-jsdom": "^28",
+    "jest-environment-node": "^28",
     "jest-transform-stub": ">=2",
     "jsonschema": ">=1",
     "npm-check-updates": ">=16",
@@ -147,7 +147,7 @@
     "stylelint-config-standard-scss": ">=5",
     "stylelint-no-unsupported-browser-features": ">=5",
     "stylelint-order": ">=5",
-    "ts-jest": ">=28",
+    "ts-jest": "^28",
     "ts-transform-import-path-rewrite": ">=0",
     "tslib": ">=2",
     "typedoc": ">=0",
